# agent-hypervisor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
examples/dashboard/: README.md  app.py
src/hypervisor/: __init__.py
src/hypervisor/api/: models.py  server.py
src/hypervisor/liability/: attribution.py  ledger.py  quarantine.py
src/hypervisor/observability/: __init__.py  causal_trace.py  event_bus.py
src/hypervisor/rings/: __init__.py  breach_detector.py  elevation.py
src/hypervisor/saga/: __init__.py  checkpoint.py  dsl.py  fan_out.py
src/hypervisor/security/: __init__.py  kill_switch.py  rate_limiter.py
src/hypervisor/session/: intent_locks.py  isolation.py  vector_clock.py
tests/unit/: test_liability_improvements.py  test_observability.py  test_ring_improvements.py  test_saga_improvements.py  test_session_security.py
